--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "lucide-react": "^0.503.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
@@ -24,14 +25,11 @@
     "@rsbuild/plugin-react": "^1.1.1",
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.1",
-    "autoprefixer": "^10.4.21",
     "eslint": "^9.23.0",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.2.0",
     "globals": "^16.0.0",
-    "postcss": "^8.5.3",
     "prettier": "^3.5.3",
-    "tailwindcss": "^4.1.4",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.29.0"
   }
